# ML-zoomcamp-local

02-regression/: Linear_Regression_FAQ.md
02-regression/dataset/: homework2.ipynb
03-classification/: LinkedInPost.txt  README.md
03-classification/data/: homework3.ipynb
04-evaluation/: README.md  homework4.ipynb
05-deployment/: Dockerfile  README.md  app.py  homework.ipynb  pyproject.toml
